tests/baselines/reference/negateOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/negateOperatorInvalidOperations.ts (10 errors) ====
    // Unary operator -
    
    // operand before -
    var NUMBER1 = var NUMBER-;  //expect error
                  ~~~
!!! error TS1006: Identifier expected; 'var' is a keyword.
                            ~
!!! error TS1005: '=' expected.
                             ~
!!! error TS1003: Identifier expected.
    
    // invalid expressions
    var NUMBER2 = -(null - undefined);
                    ~~~~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~~~~~~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var NUMBER3 = -(null - null);
                    ~~~~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var NUMBER4 = -(undefined - undefined);
                    ~~~~~~~~~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                                ~~~~~~~~~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // miss operand
    var NUMBER =-;
                 ~
!!! error TS1003: Identifier expected.